@@ -1,6 +1,8 @@
 Changes between 2.1.1 and [NEXT VERSION]
 ----------------------------------------
 
+- fix issue66: use different assertion rewriting caches when the -O option is passed
+
 Changes between 2.1.0 and 2.1.1
 ----------------------------------------------
 
